--- a/boda.html
+++ b/boda.html
@@ -12,18 +12,7 @@
             padding: 0;
             box-sizing: border-box;
             font-family: 'Roboto', sans-serif;
-            background: #f0f0f0; /* Fondo gris claro para la página */
-        }
-
-        .video-background {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover; /* Hace que el video cubra todo el área */
-            z-index: -1; /* Coloca el video detrás del contenido */
-            overflow: hidden; /* Evita barras de desplazamiento por el video */
+            background: linear-gradient(135deg, rgba(255, 215, 0, 0.5), rgba(255, 255, 255, 0.5)); /* Fondo dorado y blanco difuminado */
         }
 
         .invitation-container {
@@ -34,21 +23,37 @@
             min-height: 100vh; /* Altura mínima para asegurar que el contenido se ajuste a la ventana */
             box-sizing: border-box;
             position: relative; /* Necesario para posicionar el contenedor del video en el fondo */
-            z-index: 1; /* Asegura que las tarjetas estén en frente del video */
+            z-index: 1; /* Asegura que las tarjetas estén en frente del fondo */
             overflow-y: auto; /* Permite el desplazamiento vertical */
         }
 
         .invitation-content {
-            background: rgba(255, 255, 255, 0.8); /* Fondo blanco con opacidad para legibilidad del texto */
+            position: relative; /* Necesario para el pseudo-elemento */
             padding: 30px;
             border-radius: 10px;
             text-align: center;
             max-width: 600px;
             width: 100%;
+            height: 700px; /* Altura fija para todas las tarjetas */
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
             animation: fadeIn 2s ease-in-out;
             display: none; /* Ocultar por defecto */
             margin-bottom: 20px; /* Espacio inferior entre las tarjetas */
+            background: linear-gradient(60deg, rgba(255, 215, 0, 0.8), rgba(255, 255, 255, 0.8)); /* Fondo dorado y blanco difuminado */
+            backdrop-filter: blur(10px); /* Efecto de difuminado en el fondo */
+            color: #333; /* Color del texto para mejor legibilidad sobre el fondo blanco */
+        }
+
+        .invitation-content::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0); /* Fondo negro con opacidad del 30% */
+            border-radius: 10px; /* Asegura que el borde redondeado coincida */
+            z-index: -1; /* Coloca el pseudo-elemento detrás del contenido */
         }
 
         .title {
@@ -68,7 +73,7 @@
         .invitation-text, .date, .time, .location, .rsvp {
             margin: 10px 0;
             font-size: 1.2em;
-            color: #555;
+            color: #333; /* Color del texto para mejor legibilidad */
         }
 
         .rsvp-button {
@@ -116,6 +121,14 @@
             color: #8e44ad; /* Color al pasar el mouse */
         }
 
+        .tere {
+            margin-top: 15px;
+            cursor: pointer;
+            border-radius: 20px;
+            width: 200px; /* Tamaño ajustado de la imagen */
+            height: auto; /* Mantener proporciones */  
+        }
+
         @keyframes fadeIn {
             from { opacity: 0; }
             to { opacity: 1; }
@@ -123,11 +136,6 @@
     </style>
 </head>
 <body>
-    <video class="video-background" autoplay muted loop>
-        <source src="paisajes.mp4" type="video/mp4">
-        Tu navegador no soporta la etiqueta de video.
-    </video>
-
     <div class="invitation-container">
         <!-- Primer tarjeta -->
         <div class="invitation-content" id="invitation1">
@@ -138,6 +146,8 @@
             <p class="invitation-text">Te pedimos que pertenezcas siempre con nosotros, para que unidos a ti, lleguemos al final de nuestro camino y podamos decirte.</p>
             <p class="invitation-text"> ¡¡¡ Padre, hemos cumplido !!!</p>
             <button class="rsvp-button" onclick="showNextInvitation(2)">SIGUIENTE</button>
+            <p></p>
+            <img src="tere.jpeg" alt="Tere" class="tere">
         </div>
 
         <!-- Segunda tarjeta -->
@@ -146,12 +156,14 @@
             <h2 class="bride-groom">Tere & Roberto</h2>
             <p class="invitation-text">Los invitamos cordialmente a celebrar nuestro 50 Aniversario</p>
             <p class="invitation-text">Sábado 14 de Septiembre del 2024</p>
-            <p class="invitation-text">Salón: "Quinta los Fresnos" 6:00 P.M. C. 5.- Cda de Juarez, Jaltipa, San Mateo Ixtapacalco</p>
+            <p class="invitation-text">Salón: "Quinta los Fresnos" 6:00 P.M.</p>
+            <p class="invitation-text">C. 5.- Cda de Juarez, Jaltipa, San Mateo Ixtapacalco</p>
             <p class="invitation-text">Presiona la imagen para ver la dirección:</p>
             <a href="https://www.google.com/maps/place/Quinta+Los+Fresnos/@19.7021076,-99.1859334,18z/data=!4m6!3m5!1s0x85d1f559de1f3623:0xa17ad62cf4ea147f!8m2!3d19.7021536!4d-99.1859391!16s%2Fg%2F1pv5xh07n?entry=ttu" target="_blank">
                 <img src="maps.png" alt="Mapa del evento" class="address-image">
             </a>
             <p>Foto de la entrada del salon:</p>
+            <p></p>
             <img src="lugar.png" alt="Imagen adicional" class="addimage">
             <p></p>
             <button class="arrow-button" onclick="showNextInvitation(1)">&#8592; Anterior</button>
@@ -181,12 +193,13 @@
             var nextInvitation = document.getElementById('invitation' + nextId);
             if (nextInvitation) {
                 nextInvitation.style.display = 'block';
+                nextInvitation.scrollIntoView({ behavior: 'smooth' }); // Desplazamiento suave a la tarjeta
             }
         }
 
-        // Muestra la primera tarjeta al cargar
         document.addEventListener('DOMContentLoaded', function() {
-            showNextInvitation(1); // Muestra la primera tarjeta
+            // Muestra la primera tarjeta al cargar
+            document.getElementById('invitation1').style.display = 'block';
         });
     </script>
 </body>
