--- a/boda.html
+++ b/boda.html
@@ -12,7 +12,7 @@
             padding: 0;
             box-sizing: border-box;
             font-family: 'Roboto', sans-serif;
-            background: linear-gradient(135deg, rgba(255, 215, 0, 0.5), rgba(255, 255, 255, 0.5)); /* Fondo dorado y blanco difuminado */
+            background: linear-gradient(255deg, rgba(255, 215, 0, 0.5), rgba(255, 255, 255, 0.5)); /* Fondo dorado y blanco difuminado */
         }
 
         .invitation-container {
@@ -34,12 +34,12 @@
             text-align: center;
             max-width: 600px;
             width: 100%;
-            height: 900px; /* Altura fija para todas las tarjetas */
+            height: 1000px; /* Altura fija para todas las tarjetas */
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
             animation: fadeIn 2s ease-in-out;
             display: none; /* Ocultar por defecto */
             margin-bottom: 20px; /* Espacio inferior entre las tarjetas */
-            background: linear-gradient(60deg, rgba(255, 215, 0, 0.8), rgba(255, 255, 255, 0.8)); /* Fondo dorado y blanco difuminado */
+            background: linear-gradient(60deg, rgb(255, 255, 255), rgb(255, 255, 255)); /* Fondo dorado y blanco difuminado */
             backdrop-filter: blur(10px); /* Efecto de difuminado en el fondo */
             color: #333; /* Color del texto para mejor legibilidad sobre el fondo blanco */
         }
@@ -72,13 +72,16 @@
 
         .invitation-text, .date, .time, .location, .rsvp {
             margin: 10px 0;
-            font-size: 1.2em;
+            font-size: 1.6em;
+            font-family: 'Gabriola';
             color: #333; /* Color del texto para mejor legibilidad */
         }
 
         .rsvp-button {
             margin-top: 20px;
             padding: 10px 20px;
+            font-family: 'Gabriola';
+            font-size: 1.6em;
             background: #d4af37; /* Color dorado */
             color: white;
             border: none;
@@ -111,6 +114,7 @@
             margin: 20px;
             background: transparent;
             border: none;
+            font-family: 'Gabriola';
             font-size: 1.5em; /* Tamaño de fuente reducido */
             cursor: pointer;
             color: #555;
@@ -141,9 +145,9 @@
         <div class="invitation-content" id="invitation1">
             <h1 class="title">Nuestra boda de oro 50 aniversario</h1>
             <h2 class="bride-groom">Tere & Roberto</h2>
-            <p class="invitation-text">Hace 50 años llegamos ante Ti, llenos de ilusiones y alegrías a pedirte que con tu gran amor de Padre bendijeras nuestra unión.</p>
-            <p class="invitation-text">Hoy te decimos gracias Señor por todo lo que nos has dado.</p>
-            <p class="invitation-text">Te pedimos que pertenezcas siempre con nosotros, para que unidos a ti, lleguemos al final de nuestro camino y podamos decirte.</p>
+            <p class="invitation-text">Hace 50 años llegamos ante Ti, llenos de ilusiones y alegrías a pedirte que con tu gran amor de Padre bendijeras nuestra unión. Hoy te decimos gracias Señor por todo lo que nos has dado. Te pedimos que pertenezcas siempre con nosotros, para que unidos a ti, lleguemos al final de nuestro camino y podamos decirte.</p>
+            <!-- <p class="invitation-text">Hoy te decimos gracias Señor por todo lo que nos has dado.</p> -->
+            <!-- <p class="invitation-text">Te pedimos que pertenezcas siempre con nosotros, para que unidos a ti, lleguemos al final de nuestro camino y podamos decirte.</p> -->
             <p class="invitation-text"> ¡¡¡ Padre, hemos cumplido !!!</p>
             <button class="rsvp-button" onclick="showNextInvitation(2)">SIGUIENTE</button>
             <p></p>
@@ -160,11 +164,8 @@
             <p class="invitation-text">C. 5.- Cda de Juarez, Jaltipa, San Mateo Ixtapacalco</p>
             <p class="invitation-text">Presiona la imagen para ver la dirección:</p>
             <a href="https://www.google.com/maps/place/Quinta+Los+Fresnos/@19.7021076,-99.1859334,18z/data=!4m6!3m5!1s0x85d1f559de1f3623:0xa17ad62cf4ea147f!8m2!3d19.7021536!4d-99.1859391!16s%2Fg%2F1pv5xh07n?entry=ttu" target="_blank">
-                <img src="maps.png" alt="Mapa del evento" class="address-image">
+                <img src="mapss.jpeg" alt="Mapa del evento" class="address-image">
             </a>
-            <p>Foto de la entrada del salon:</p>
-            <p></p>
-            <img src="lugar.png" alt="Imagen adicional" class="addimage">
             <p></p>
             <button class="arrow-button" onclick="showNextInvitation(1)">&#8592; Anterior</button>
             <button class="rsvp-button" onclick="showNextInvitation(3)">SIGUIENTE</button>
@@ -176,8 +177,11 @@
             <h2 class="bride-groom">Tere & Roberto</h2>
             <p class="invitation-text">En este día tan especial el mayor regalo es tu compañia, si deseas obsequiarnos algo nos encantaria que Fuera en efectivo colocandolo dentro de un sobre que se te entregara al llegar al evento, el sobre lo podras depositar en un cofre que encontraras en la Fiesta.</p>
             <p class="invitation-text">¡Estamos ansiosos de celebrar contigo este día tan especial!</p>
+            <p></p>
+            <img src="tere.jpeg" alt="Tere" class="tere">
+            <p></p>
             <button class="arrow-button" onclick="showNextInvitation(2)">&#8592; Anterior</button>
-            <button class="rsvp-button">Confirmar Asistencia</button>
+           <!-- <button class="rsvp-button">Confirmar Asistencia</button> -->
         </div>
     </div>
 
