--- a/boda.html
+++ b/boda.html
@@ -6,6 +6,7 @@
     <title>Nuestra boda de oro 50 aniversario</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Roboto:wght@300&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Roboto:wght@300&family=Gabriola&display=swap');
 
         body {
             margin: 0;
