--- a/boda.html
+++ b/boda.html
@@ -176,22 +176,6 @@
 
         <!-- Segunda tarjeta -->
         <div class="invitation-content" id="invitation2">
-            <h1 class="title">Lugar Del Evento</h1>
-            <h2 class="bride-groom">Tere & Roberto</h2>
-            <p class="invitation-text">Los invitamos cordialmente a celebrar nuestro 50 Aniversario</p>
-            <p class="invitation-text">Sábado 14 de Septiembre del 2024</p>
-            <p class="invitation-text">Salón: "Quinta los Fresnos" 6:00 P.M.</p>
-            <p class="invitation-text">C. 5.- Cda de Juarez, Jaltipa, San Mateo Ixtapacalco</p>
-            <button class="arrow-button" onclick="showNextInvitation(1)">&#8592; Anterior</button>
-            <button class="rsvp-button" onclick="showNextInvitation(3)">SIGUIENTE</button>
-            <p class="invitation-text">Presiona la imagen para ver la dirección:</p>
-            <a href="https://www.google.com/maps/place/Quinta+Los+Fresnos/@19.7021076,-99.1859334,18z/data=!4m6!3m5!1s0x85d1f559de1f3623:0xa17ad62cf4ea147f!8m2!3d19.7021536!4d-99.1859391!16s%2Fg%2F1pv5xh07n?entry=ttu" target="_blank">
-                <img src="mapss.jpeg" alt="Mapa del evento" class="address-image">
-            </a>
-        </div>
-
-        <!-- Tercera tarjeta -->
-        <div class="invitation-content" id="invitation3">
             <h1 class="title">Detalles importantes</h1>
             <!-- <h2 class="bride-groom">Tere & Roberto</h2> -->
             <p class="invitation-text">En este día tan especial el mayor regalo es tu compañia, si deseas obsequiarnos algo nos encantaria que Fuera en efectivo colocandolo dentro de un sobre que se te entregara al llegar al evento, el sobre lo podras depositar en un cofre que encontraras en la Fiesta.</p>
@@ -199,7 +183,24 @@
             <p></p>
             <img src="tere.jpeg" alt="Tere" class="tere">
             <p></p>
+            <button class="arrow-button" onclick="showNextInvitation(1)">&#8592; Anterior</button>
+            <button class="rsvp-button" onclick="showNextInvitation(3)">SIGUIENTE</button>
+        </div>
+
+        <!-- Tercera tarjeta -->
+        <div class="invitation-content" id="invitation3">
+            <h1 class="title">Lugar Del Evento</h1>
+            <h2 class="bride-groom">Tere & Roberto</h2>
+            <p class="invitation-text">Los invitamos cordialmente a celebrar nuestro 50 Aniversario</p>
+            <p class="invitation-text">Sábado 14 de Septiembre del 2024</p>
+            <p class="invitation-text">Salón: "Quinta los Fresnos" 6:00 P.M.</p>
+            <p class="invitation-text">C. 5.- Cda de Juarez, Jaltipa, San Mateo Ixtapacalco</p>
             <button class="arrow-button" onclick="showNextInvitation(2)">&#8592; Anterior</button>
+            <button class="rsvp-button" onclick="showNextInvitation(1)">INICIO</button>
+            <p class="invitation-text">Presiona la imagen para ver la dirección:</p>
+            <a href="https://www.google.com/maps/place/Quinta+Los+Fresnos/@19.7021076,-99.1859334,18z/data=!4m6!3m5!1s0x85d1f559de1f3623:0xa17ad62cf4ea147f!8m2!3d19.7021536!4d-99.1859391!16s%2Fg%2F1pv5xh07n?entry=ttu" target="_blank">
+                <img src="mapss.jpeg" alt="Mapa del evento" class="address-image">
+            </a>
         </div>
     </div>
 
