--- a/boda.html
+++ b/boda.html
@@ -58,7 +58,7 @@
 
         .title {
             font-family: 'Great Vibes', cursive;
-            font-size: 2.5em;
+            font-size: 2.8em;
             margin: 0;
             color: #d4af37; /* Color dorado */
         }
@@ -72,7 +72,7 @@
 
         .invitation-text, .date, .time, .location, .rsvp {
             margin: 10px 0;
-            font-size: 1.6em;
+            font-size: 1.9em;
             font-family: 'Great Vibes', cursive;
             color: #333; /* Color del texto para mejor legibilidad */
         }
@@ -128,7 +128,7 @@
             margin-top: 15px;
             cursor: pointer;
             border-radius: 20px;
-            width: 200px; /* Tamaño ajustado de la imagen */
+            width: 300px; /* Tamaño ajustado de la imagen */
             height: auto; /* Mantener proporciones */  
         }
 
@@ -171,7 +171,7 @@
             <p class="invitation-text"> ¡¡¡ Padre, hemos cumplido !!!</p>
             <button class="rsvp-button" onclick="showNextInvitation(2)">SIGUIENTE</button>
             <p></p>
-            <img src="tere.jpeg" alt="Tere" class="tere">
+            <img src="cin.jpeg" alt="Tere" class="tere">
         </div>
 
         <!-- Segunda tarjeta -->
@@ -181,7 +181,7 @@
             <p class="invitation-text">En este día tan especial el mayor regalo es tu compañia, si deseas obsequiarnos algo nos encantaria que Fuera en efectivo colocandolo dentro de un sobre que se te entregara al llegar al evento, el sobre lo podras depositar en un cofre que encontraras en la Fiesta.</p>
             <p class="invitation-text">¡Estamos ansiosos de celebrar contigo este día tan especial!</p>
             <p></p>
-            <img src="tere.jpeg" alt="Tere" class="tere">
+            <img src="cinn.jpeg" alt="Tere" class="tere">
             <p></p>
             <button class="arrow-button" onclick="showNextInvitation(1)">&#8592; Anterior</button>
             <button class="rsvp-button" onclick="showNextInvitation(3)">SIGUIENTE</button>
