--- a/boda.html
+++ b/boda.html
@@ -167,7 +167,7 @@
             <h1 class="title">Nuestras bodas de oro</h1>
             <h2 class="bride-groom">Tere & Roberto</h2>
             <h1 class="title">50 aniversario</h1>
-            <p class="invitation-text">Hace 50 años llegamos ante Ti, llenos de ilusiones y alegrías a pedirte que con tu gran amor de Padre bendijeras nuestra unión. Hoy te decimos gracias Señor por todo lo que nos has dado. Te pedimos que pertenezcas siempre con nosotros, para que unidos a ti, lleguemos al final de nuestro camino y podamos decirte.</p>
+            <p class="invitation-text">Hace 50 años llegamos ante Ti, llenos de ilusiones y alegrías a pedirte que con tu gran amor de Padre bendijeras nuestra unión. Hoy te decimos gracias Señor por todo lo que nos has dado. Te pedimos que permanezcas siempre con nosotros, para que unidos a ti, lleguemos al final de nuestro camino y podamos decirte.</p>
             <p class="invitation-text"> ¡¡¡ Padre, hemos cumplido !!!</p>
             <button class="rsvp-button" onclick="showNextInvitation(2)">SIGUIENTE</button>
             <p></p>
