--- a/boda.html
+++ b/boda.html
@@ -201,6 +201,8 @@
             <a href="https://www.google.com/maps/place/Quinta+Los+Fresnos/@19.7021076,-99.1859334,18z/data=!4m6!3m5!1s0x85d1f559de1f3623:0xa17ad62cf4ea147f!8m2!3d19.7021536!4d-99.1859391!16s%2Fg%2F1pv5xh07n?entry=ttu" target="_blank">
                 <img src="mapss.jpeg" alt="Mapa del evento" class="address-image">
             </a>
+            <p class="invitation-text">Por Favor Confirma tu Asistencia a este mismo numero: </p>
+            <p class="invitation-text">55-2190-2678</p>
         </div>
     </div>
 
