--- a/boda.html
+++ b/boda.html
@@ -194,15 +194,16 @@
             <p class="invitation-text">Los invitamos cordialmente a celebrar nuestro 50 Aniversario</p>
             <p class="invitation-text">Sábado 14 de Septiembre del 2024</p>
             <p class="invitation-text">Salón: "Quinta los Fresnos" 6:00 P.M.</p>
-            <p class="invitation-text">C. 5.- Cda de Juarez, Jaltipa, San Mateo Ixtapacalco</p>
+            <p class="invitation-text">C. 5.- Cda de Juarez, Jaltipa, San Mateo Ixtacalco</p>
             <button class="arrow-button" onclick="showNextInvitation(2)">&#8592; Anterior</button>
             <button class="rsvp-button" onclick="showNextInvitation(1)">INICIO</button>
             <p class="invitation-text">Presiona la imagen para ver la dirección:</p>
             <a href="https://www.google.com/maps/place/Quinta+Los+Fresnos/@19.7021076,-99.1859334,18z/data=!4m6!3m5!1s0x85d1f559de1f3623:0xa17ad62cf4ea147f!8m2!3d19.7021536!4d-99.1859391!16s%2Fg%2F1pv5xh07n?entry=ttu" target="_blank">
                 <img src="mapss.jpeg" alt="Mapa del evento" class="address-image">
             </a>
-            <p class="invitation-text">Por Favor Confirma tu Asistencia a este mismo numero: </p>
+            <p class="invitation-text">Por Favor Confirma tu Asistencia lo antes posible a estos numeros: </p>
             <p class="invitation-text">55-2190-2678</p>
+            <p class="invitation-text">55-3440-4330</p>
         </div>
     </div>
 
