--- a/boda.html
+++ b/boda.html
@@ -80,8 +80,8 @@
         .rsvp-button {
             margin-top: 20px;
             padding: 10px 20px;
-            font-family: 'Gabriola', sans-serif;
-            font-size: 1.6em;
+            font-family: 'Courier New', cursive;
+            font-size: 1.1em;
             background: #d4af37; /* Color dorado */
             color: white;
             border: none;
